@@ -279,6 +279,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.9rc1
 
+ - [ZBX-4201] fixed template items included in bar reports (Vedmak)
  - [ZBX-4178] fixed compilation on FreeBSD: union has no member named `sival_int' (asaveljevs)
  - [ZBX-4241] added truncation of "ids" table to the database conversion procedure (asaveljevs)
  - [ZBX-2493] improved default messages for actions (Vedmak)
